--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"universal-cookie": "^4.0.4"
 	},
 	"scripts": {
+		"deploy": "gh-pages -d build",
 		"prestart": "npm install",
 		"pretest": "npm install",
 		"start": "react-scripts start",
@@ -49,6 +50,7 @@
 		"enzyme": "^3.2.0",
 		"enzyme-adapter-react-16": "^1.1.0",
 		"expect": "^21.2.1",
+		"gh-pages": "^4.0.0",
 		"jest-junit": "^3.3.0",
 		"react-test-renderer": "^16.2.0",
 		"redux-devtools-extension": "^2.13.9"
