--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fakeappi-test-react",
 	"version": "0.1.0",
+	"homepage":"https://jeanoviedo.github.io/FakeApi",
 	"private": true,
 	"dependencies": {
 		"@testing-library/dom": "^8.1.0",
@@ -32,7 +33,8 @@
 		"universal-cookie": "^4.0.4"
 	},
 	"scripts": {
-		"deploy": "gh-pages -d build",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist",
 		"prestart": "npm install",
 		"pretest": "npm install",
 		"start": "react-scripts start",
