--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "fakeappi-test-react",
 	"version": "0.1.0",
-	"homepage":"https://jeanoviedo.github.io/FakeApi",
+	"homepage": "https://jeanoviedo.github.io/FakeApi",
 	"private": true,
 	"dependencies": {
 		"@testing-library/dom": "^8.1.0",
@@ -34,6 +34,7 @@
 	},
 	"scripts": {
 		"predeploy": "npm run build",
+		"build": "react-scripts build",
 		"deploy": "gh-pages -d dist",
 		"prestart": "npm install",
 		"pretest": "npm install",
